--- a/OldLoadingScreen/BetterLoadingScreen.csproj
+++ b/OldLoadingScreen/BetterLoadingScreen.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OldLoadingScreen</RootNamespace>
-    <AssemblyName>OldLoadingScreen</AssemblyName>
+    <AssemblyName>BetterLoadingScreen</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
